--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -40,11 +40,3 @@ body {
   bottom: 0px;
   right: 0px;
 }
-
-.material-symbols-rounded {
-  font-size: unset;
-  line-height: unset;
-  position: relative;
-  vertical-align: middle;
-  top: -0.1em;
-}
